added document about auto-install.el
git-svn-id: http://svn.coderepos.org/share/lang/elisp/perl-completion/branch/1.1@33413 d0d07461-0603-4401-acd4-de1884942a52

--- a/doc.org
+++ b/doc.org
@@ -21,6 +21,11 @@
 
         (install-elisp "http://..../perl-completion.el")
 
+    See http://www.emacswiki.org/emacs/InstallElisp for more detail.
+
+    And auto-install.el is similar to install-elisp.el.
+    See http://www.emacswiki.org/emacs/AutoInstall for more detail.
+
 **** Emacs version
      perl-completion.el needs emacs version higher than 22.
 
